--- a/assets/index.css
+++ b/assets/index.css
@@ -10,8 +10,7 @@ html {
 }
     
 body {
-    background: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url("./img/gemstone.png");
-    background-size: cover;
+    background-color: var(--app-dark-bg);
 }
     
 .container {
@@ -19,88 +18,11 @@ body {
     margin-inline: auto;
 }
 
-/* - - - - - - - - - - - - - -
-            HEADER
-- - - - - - - - - - - - - - - */ 
+/* - - - - - - - - - - - - - - - - - - - - - -
+            WRAPPER / CONTAINER
+- - - - - - - - - - - - - - - - - - - - - - - */
 
-.title {
-    user-select: none;
-}
-
-.title, a {
-    font-size: 24px;
-    height: 40px;
-    font-weight: 600;
-    color: #000000;
-    font-family: inherit;
-    line-height: 40px;
-    text-decoration: none;
-}
-
-header a {
-    font-size: 24px;
-    font-weight: 300;
-    position: relative;
-    padding: 1px 0;
-}
-
-header a::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #fff;
-    opacity: 0;
-    transition: opacity 0.3s, transform 0.3s;
-  }
-
-:hover::after, header a:focus::after {
-    opacity: 1;
-    transform: translate3d(0, 1px, 0);
-}
-
-header a, .title {
-    color: #fff;
-}
-
-li {
-    display: inline;
-    overflow: auto;
-    margin-left: 20px;
-}
-
-/* Adds margin between all elements inside */
-header > * {
-    margin: 0 7vw;
-}
-
-header {
-    width: 100%;
-    padding: 10px;
-    display: flex;
-    background: linear-gradient(to top left, #90169b75, #b828cb75);
-    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.75);
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    justify-content: space-between;
-}
-
-.sidebar i {
-    font-size: 24px;
-    color: #fff;
-    position: absolute;
-    margin-top: 20px;
-    display: none;
-}
-
-/* - - - - - - - - - - - - - -
-            FORM
-- - - - - - - - - - - - - - - */ 
-
-form {
+.wrapper {
     margin: auto;
     width: 50%;
     transform: translate(0, 70%);
@@ -111,47 +33,3 @@ form {
     border-radius: 5px;
 }
 
-input[type=text] {
-    padding: 10px;
-    color: var(--app-font-color);
-    margin-top: 20px;
-    border-radius: 20px;
-    border: solid 1px #101010;
-    background-color: var(--app-dark-bg);
-    box-shadow: inset 0 0 5px #10101d;
-}
-
-input[type=text]:hover {
-    background: #232329;
-    border-style: solid;
-    border-width: 1px;
-}
-
-input[type=text]:focus {
-    background: #232329;
-    border-style: solid;
-    border-width: 1px;
-}
-
-input[type=button] {
-    margin: 20px 0;
-    width: 150px;
-    padding: 10px;
-    background-color: #90169b75;
-    border-radius: 20px;
-    font-size: 16px;
-    color: var(--app-font-color);
-}
-
-.time {
-    text-align: center;
-    color: var(--app-font-color);
-}
-
-.clock {
-    font-size: 6vw;
-}
-
-.small-clock {
-    font-size: 2vw;
-}
