--- a/assets/index.css
+++ b/assets/index.css
@@ -3,6 +3,14 @@
 :root {
     --app-dark-bg: #1c1c22;
     --app-font-color: #f2f4f6;
+
+    /* COLORS */
+
+    --app-blue: #09f;
+    --app-green: #9f0;
+    --app-orange: #f90;
+    --app-pink: #f09;
+    --app-purple: #90f;
 }
 
 html {
@@ -23,13 +31,40 @@ body {
 - - - - - - - - - - - - - - - - - - - - - - - */
 
 .wrapper {
+    color: var(--app-font-color);
+    text-align: center;
+    transform: translate(0, 20%);
+}
+
+.layout {
     margin: auto;
     width: 50%;
-    transform: translate(0, 70%);
-    background-color: #2e2e35;
     padding: 25px 50px;
-    box-shadow: 5px 5px 15px #111113;
     position: relative;
     border-radius: 5px;
 }
 
+select {
+    margin: 10px 0;
+    padding: 8px;
+    width: 40%;
+    border-radius: 5px;
+    background-color: #25252a;
+    color: var(--app-font-color);
+}
+
+input[type="button"] {
+    width: 18%;
+    padding: 8px;
+    border-radius: 5px;
+    background-color: var(--app-orange);
+    color: var(--app-font-color);
+}
+
+.shapes {
+    width: 100%;
+    height: 400px;
+    background-color: #25252a;
+    border-radius: 5px;
+    display: grid;
+}
