--- a/assets/index.css
+++ b/assets/index.css
@@ -46,7 +46,7 @@ body {
 
 select {
     margin: 10px 0;
-    padding: 8px;
+    padding: 10px;
     width: 40%;
     border-radius: 5px;
     background-color: #25252a;
@@ -55,16 +55,19 @@ select {
 
 input[type="button"] {
     width: 18%;
-    padding: 8px;
+    padding: 10px;
     border-radius: 5px;
     background-color: var(--app-orange);
     color: var(--app-font-color);
 }
 
 .shapes {
+    padding: 10px;
     width: 100%;
     height: 400px;
     background-color: #25252a;
     border-radius: 5px;
     display: grid;
+    grid-column-gap: 0;
+    grid-template-columns: repeat(6, 100px);
 }
