--- a/assets/index.css
+++ b/assets/index.css
@@ -38,7 +38,7 @@ body {
 
 .layout {
     margin: auto;
-    width: 50%;
+    width: fit-content;
     padding: 25px 50px;
     position: relative;
     border-radius: 5px;
@@ -62,7 +62,7 @@ input[type="button"] {
 }
 
 .shapes {
-    padding: 10px;
+    padding: 15px;
     width: 100%;
     height: 400px;
     background-color: #25252a;
